--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.MuKo2" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:statusBarColor">@color/black</item>
-        <item name="android:windowBackground">@color/black</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
+    <style name="Theme.Kotlinmusic" parent="Theme.AppCompat.Light.DarkActionBar" />
 </resources>
