--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/albumCover"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/albumCover"
+        android:src="@drawable/ic_launcher_foreground" />
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:cardCornerRadius="4dp">
-
-        <LinearLayout
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
+        <TextView
+            android:id="@+id/musicTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_margin="1dp">
+            android:layout_height="wrap_content"
+            android:text="@string/musicTitle"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/artistName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/artistName"
+        android:textSize="14sp" />
+    </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/btnPlay"
+        android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:contentDescription="@string/playButton"
+    app:srcCompat="@android:drawable/ic_media_play" />
 
-            <ImageView
-                android:id="@+id/albumCover"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:contentDescription="@string/albumCover"
-                android:src="@drawable/ic_launcher_foreground" />
-            <TextView
-                android:id="@+id/musicTitle"
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="@string/musicTitle" />
+    <ImageButton
+        android:id="@+id/btnPause"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/pauseButton"
+        app:srcCompat="@android:drawable/ic_media_pause" />
 
-            <ImageButton
-                android:id="@+id/btnPlay"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/playButton"
-                app:srcCompat="@android:drawable/ic_media_play" />
-
-            <ImageButton
-                android:id="@+id/btnPause"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/pauseButton"
-                app:srcCompat="@android:drawable/ic_media_pause" />
-
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    <ImageButton
+        android:id="@+id/btnFavorite"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:contentDescription="@string/addToFavorite"
+    app:srcCompat="@drawable/ic_launcher_foreground" />
 </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    </LinearLayout>
