--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_launcher_foreground"
         android:title="@string/home" />
     <item
-        android:id="@+id/navigation_favorites"
+        android:id="@+id/favoritesFragment"
         android:icon="@drawable/ic_launcher_foreground"
         android:title="@string/favorites" />
 </menu>
