--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white_two">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
@@ -19,6 +19,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:itemBackground="@color/bottom_menu_background"
+        app:itemIconTint="@drawable/bottom_bar_style"
+        app:itemTextColor="@drawable/bottom_bar_style"
         app:menu="@menu/bottom_navigation_menu"
         android:background="?android:attr/windowBackground"/>
 </LinearLayout>
