--- a/app/src/main/res/layout/music_detail_activity.xml
+++ b/app/src/main/res/layout/music_detail_activity.xml
@@ -7,6 +7,16 @@
     android:background="@color/white_two"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/albumCover"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:contentDescription="@string/albumCover"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_foreground" />
+
+
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,13 +30,6 @@
             android:orientation="horizontal"
             android:padding="10dp">
 
-            <ImageView
-                android:id="@+id/albumCover"
-                android:layout_width="120dp"
-                android:layout_height="119dp"
-                android:contentDescription="@string/albumCover"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_foreground" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -44,8 +47,7 @@
                     android:text="@string/musicTitle"
                     android:textColor="@color/black"
                     android:textSize="15sp"
-                    android:maxLines="1"
-                    android:ellipsize="end"
+
                     android:textStyle="normal" />
 
 
@@ -75,6 +77,7 @@
                         tools:srcCompat="@drawable/stop_24px" />
 
                     <ImageButton
+                        android:visibility="gone"
                         android:id="@+id/btnFavorite"
                         android:layout_width="68dp"
                         android:layout_height="68dp"
