--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">@color/red</color>
+    <color name="colorPrimaryDark">@color/red</color>
+    <color name="colorAccent">@color/red</color>
+
+    <color name="bottom_menu_background">@color/white</color>
+    <color name="bottom_menu_item_default_color">@color/black</color>
+    <color name="bottom_menu_item_checked_color">@color/red</color>
+
+
+
+
+    <color name="red">#F90101</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -8,4 +21,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="off_white">#D8D8D8</color>
+    <color name="white_two">#f1f1f4</color>
 </resources>
